--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ opendal = { version = ">=0.46,<0.50", default-features = false }
 zarrs_storage = { workspace = true, features = ["async"] }
 
 [dev-dependencies]
-opendal = { version = "0.49", features = ["services-fs", "services-http"] }
+opendal = { workspace = true, features = ["services-fs", "services-http"] }
 tempfile = "3"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 zarrs_storage = { workspace = true, features = ["async", "tests"] }
