--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
 edition = "2021"
 rust-version = "1.77"
 description = "opendal store support for the zarrs crate"
+homepage = "https://zarrs.dev"
 documentation = "https://docs.rs/zarrs_opendal"
 repository = "https://github.com/LDeakin/zarrs"
 license = "MIT OR Apache-2.0"
