--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ rust-version = "1.77"
 description = "opendal store support for the zarrs crate"
 homepage = "https://zarrs.dev"
 documentation = "https://docs.rs/zarrs_opendal"
-repository = "https://github.com/LDeakin/zarrs"
+repository = "https://github.com/LDeakin/zarrs/tree/main/zarrs_opendal"
 license = "MIT OR Apache-2.0"
 keywords = ["zarr", "zarrs", "storage", "store"]
 categories = ["encoding"]
