--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zarrs_opendal"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
 edition = "2021"
 rust-version = "1.80"
@@ -25,4 +25,4 @@ tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 zarrs_storage = { version = "0.4.0", features = ["async", "tests"] }
 
 [patch.crates-io]
-zarrs_storage = { path = "../zarrs/zarrs_storage" }
+zarrs_storage = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0-beta.0" }
