--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ tempfile = "3"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 zarrs_storage = { version = "0.4.0", features = ["async", "tests"] }
 
-[patch.crates-io]
-zarrs_storage = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0-beta.2" }
+# [patch.crates-io]
+# zarrs_storage = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0" }
