--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zarrs_opendal"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
 edition = "2021"
 rust-version = "1.80"
@@ -16,10 +16,13 @@ categories = ["encoding"]
 async-trait = "0.1.74"
 futures = "0.3.29"
 opendal = { version = ">=0.54,<0.55", default-features = false }
-zarrs_storage = { version = "0.3.4", features = ["async"] }
+zarrs_storage = { version = "0.4.0", features = ["async"] }
 
 [dev-dependencies]
 opendal = { version = "0.54.0", features = ["services-fs", "services-http"] }
 tempfile = "3"
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
-zarrs_storage = { version = "0.3.4", features = ["async", "tests"] }
+zarrs_storage = { version = "0.4.0", features = ["async", "tests"] }
+
+# [patch.crates-io]
+# zarrs_storage = { git = "https://github.com/zarrs/zarrs.git", tag = "zarrs-v0.22.0" }
